--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,10 @@
-
+fastapi==0.115.0
+uvicorn==0.30.6
+SQLAlchemy==2.0.34
+pydantic==2.8.2
+pydantic-settings==2.4.0
+python-jose==3.3.0
+passlib[bcrypt]==1.7.4
+slowapi==0.1.9
+bleach==6.1.0
+python-dotenv==1.0.1
